<resources>
    <string name="app_name">My_Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Donation1.0</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="Paypal">Paypal</string>
    <string name="Direct">Direct</string>
    <string name="amount">Amount</string>
    <string name="total_so_far">Total so far</string>
    <string name="total">$ Total</string>
    <string name="menuReport">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="menuReset">Reset</string>
    <string name="reportTitle">Report</string>
    <string name="defaultAmount">Amount</string>
    <string name="defaultMethod">Method</string>
    <string name="defaultUpvote">Upvotes</string>
    <string name="delete">Delete</string>
    <string name="upvotes">UpVotes</string>
    <string name="method">Method</string>
</resources>