<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true">

    <TextView
        android:id="@+id/reportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="31dp"
        android:text="@string/reportTitle"
        android:textColor="#040404"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reportTitle"
        android:layout_alignParentStart="true"
        android:id="@+id/linearlayout">

        <TextView
            android:id="@+id/row_upvotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/upvotes"
            android:textSize="20sp"
            android:textColor="@color/design_default_color_primary_dark"/>

        <TextView
            android:id="@+id/row_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/amount"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/row_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/method"
            android:textSize="20sp"
            android:textColor="@color/design_default_color_primary_dark"/>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/report_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/linearlayout">

        <ListView
            android:id="@+id/reportList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>